refactor: use toList instead of collector